--- a/NextJS/nextjs-admin-template/package.json
+++ b/NextJS/nextjs-admin-template/package.json
@@ -27,8 +27,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start --port ${PORT-3000}",
-    "export": "yarn build && next export -o _static",
-    "prepare": "husky install"
+    "export": "yarn build && next export -o _static"
   },
   "repository": {
     "type": "git",
@@ -49,7 +48,6 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.25.1",
-    "husky": "7.0.2",
     "prettier": "2.3.2",
     "pretty-quick": "3.1.1",
     "react-live": "2.3.0",
