--- a/nest-next/nest-next/package.json
+++ b/nest-next/nest-next/package.json
@@ -12,8 +12,8 @@
     "build:nest": "nest build --path ./tsconfig.server.json",
     "start": "node ./dist/server/main.js",
     "start:next": "next dev",
-    "start:dev": "nest start --path ./tsconfig.server.json --watch",
-    "start:debug": "nest start --path ./tsconfig.server.json --debug --watch",
+    "start:nest": "nest start --path ./tsconfig.server.json --watch",
+    "start:nest-debug": "nest start --path ./tsconfig.server.json --debug --watch",
     "start:prod": "node dist/main",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
