--- a/nest-next/nest-next/package.json
+++ b/nest-next/nest-next/package.json
@@ -12,8 +12,8 @@
     "build:nest": "nest build --path ./tsconfig.server.json",
     "start": "node ./dist/server/main.js",
     "start:next": "next dev",
-    "start:nest": "nest start --path ./tsconfig.server.json --watch",
-    "start:nest-debug": "nest start --path ./tsconfig.server.json --debug --watch",
+    "start:dev": "nest start --path ./tsconfig.server.json --watch",
+    "start:debug": "nest start --path ./tsconfig.server.json --debug --watch",
     "start:prod": "node dist/main",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
@@ -22,6 +22,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "nest-next": "^9.5.0",
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
